fittings/crates/macros/tests/ui/fail/wrong_return_type.stderr
error: service methods must have signature `async fn name(&self, ctx: ServiceContext, params: P) -> Result<R, FittingsError>`
 --> tests/ui/fail/wrong_return_type.rs:3:20
  |
3 |     async fn hello(&self, params: ()) -> ();
  |                    ^
